fix h3 alignment in right rail

--- a/public/main.css
+++ b/public/main.css
@@ -91,7 +91,6 @@
 .rail__content h3 {
   border-bottom: 1px solid #cec6b9;
   padding-bottom: 5px;
-  padding-left: 20px;
   font-family: "MetricWeb", sans-serif;
   font-weight: 500;
 }
